# kenro-django-example

./: README.md  manage.py  pyproject.toml
.github/workflows/: unittest.yaml
my_proj/: urls.py
my_proj/settings/: base.py  dev.py  prod.py  types.py
my_proj/settings/account/: __init__.py
my_proj/settings/payment/: __init__.py
v1/: urls.py
v1/account/: apps.py  router.py
v1/account/tests/: test_router.py
v1/payment/: apps.py  router.py
v2/: urls.py
v2/account/: apps.py  router.py
v2/payment/: router.py
