[project]
name = "kenro-django-example"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "daphne>=4.2.1",
    "django>=5.2.8,<6",
    "django-ninja>=1.4.5",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.7",
    "ruff>=0.14.4",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "my_proj.settings.base"
